--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               	advised by <a href="http://www.joonseok.net/home.html">Prof. Joonseok Lee</a>. I also received Bachelor's degree in Computer Science, Engineering at University of Illinois at Urbana-Champaign.
               </p>
               <p style="text-align:center">
-                <a href="mailto:sha17@snu.ac.kr">Email</a> &nbsp/&nbsp
+                <a href="mailto:seongsu0311@gmail.com">seongsu0311@gmail.com</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/seongsu-ha-944403254/">LinkedIn</a> 
               </p>
             </td>
