--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               <heading>News</heading>
               <p>
                 <ul>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">09/2025: New paper on video large langague models. <a href="https://arxiv.org/pdf/2509.08016", target="_blank">arXiv 2025</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">08/2025: Starting PhD in Computer Science at <a href="https://www.unc.edu/", target="_blank">the University of North Carolina at Chapel Hill</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2025: Started working at EverEx as AI research engineer</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">12/2024: Marengo-2.7, a new SOTA video foundation model of multivector representation, released! <a href="https://www.twelvelabs.io/blog/introducing-marengo-2-7", target="_blank">Tech Blog</a></li>
@@ -209,6 +210,41 @@
           </tr>
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <tr onmouseout="vps_stop()" onmouseover="vps_start()">
+            <td width="25%">
+              <div class="one">
+                <div class="two" id='vps_image'>
+                  <img src='images/vps_image_1.PNG' width="160">
+                </div>
+                <img src='images/vps_image_2.PNG' width="160">
+              </div>
+              <script type="text/javascript">
+                function vps_start() {
+                  document.getElementById('vps_image').style.opacity = "0";
+                }
+
+                function vps_stop() {
+                  document.getElementById('vps_image').style.opacity = "1";
+                }
+                vps_stop()
+              </script>
+            </td>
+            <td valign="top" width="75%">
+              
+              <papertitle>Video Parallel Scaling: Aggregating Diverse Frame Subsets for VideoLLMs</papertitle>
+              
+              <br>
+              Hyungjin Chung*, Hyelin Nam, Jiyeon Kim, Hyojun Go, Byeongjun Park, Junho Kim, Joonseok Lee, <strong>Seongsu Ha</strong>strong>, BH Kim
+              <br>
+              <em>arXiv</em>, 2025
+              <br>
+              <a href="https://arxiv.org/pdf/2509.08016">paper</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+	
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
          <tr onmouseout="nemo_stop()" onmouseover="nemo_start()">
             <td width="25%">
