--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <papertitle>Video Parallel Scaling: Aggregating Diverse Frame Subsets for VideoLLMs</papertitle>
               
               <br>
-              Hyungjin Chung*, Hyelin Nam, Jiyeon Kim, Hyojun Go, Byeongjun Park, Junho Kim, Joonseok Lee, <strong>Seongsu Ha</strong>strong>, BH Kim
+              Hyungjin Chung*, Hyelin Nam, Jiyeon Kim, Hyojun Go, Byeongjun Park, Junho Kim, Joonseok Lee, <strong>Seongsu Ha</strong>, BH Kim
               <br>
               <em>arXiv</em>, 2025
               <br>
