--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <heading>News</heading>
               <p>
                 <ul>
-		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">09/2025: New paper on video large langague models. <a href="https://arxiv.org/pdf/2509.08016", target="_blank">arXiv 2025</a></li>
+		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">09/2025: New paper on video large language models. <a href="https://arxiv.org/pdf/2509.08016", target="_blank">arXiv 2025</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">08/2025: Starting PhD in Computer Science at <a href="https://www.unc.edu/", target="_blank">the University of North Carolina at Chapel Hill</a></li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">01/2025: Started working at EverEx as AI research engineer</li>
 		  <li style="list-style-position:inside;margin:0;padding:0;text-align:left;">12/2024: Marengo-2.7, a new SOTA video foundation model of multivector representation, released! <a href="https://www.twelvelabs.io/blog/introducing-marengo-2-7", target="_blank">Tech Blog</a></li>
